# uv-build-git-repro

./: pyproject.toml
src/uv_build_git_repro/: __init__.py
