[project]
name = "uv-build-git-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Soof Golan", email = "hi@soofgolan.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
